# integrate-baumer-cam

./: .env.example  .gitignore  README.md  config.json  main.py  modbus_button.py  pyproject.toml  source_baumer.py  source_webcam.py
.claude/: settings.local.json
